--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,52 +2,51 @@ name: CI - Cypress
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main, master ]
-  workflow_dispatch:
+    branches: [ "main" ]
 
 jobs:
   e2e-and-api:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.npm
+            node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install deps
         run: npm ci
 
-      # Roda TODOS os testes (E2E + API) em Chrome headless
+      # Executa TODOS os testes (E2E + API) em headless Chrome
       - name: Run Cypress
-        uses: cypress-io/github-action@v6
-        with:
-          browser: chrome
-          headless: true
-          command: npm test
-        env:
-          # Evita travar por erros de 3rd-party na UI (você já trata no support/e2e.js, mas fica aqui como reforço)
-          CYPRESS_retries: '2'
+        run: npx cypress run --browser chrome --headless
 
-      # Publica vídeos (sempre) e screenshots (só se falhar)
+      # Faz upload dos artefatos (vídeos e screenshots de falhas)
       - name: Upload videos
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-videos
-          path: cypress/videos/**/*
-          if-no-files-found: ignore
+          path: cypress/videos
 
       - name: Upload screenshots
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-screenshots
-          path: cypress/screenshots/**/*
-          if-no-files-found: ignore
+          path: cypress/screenshots
